force-app/main/default/objects/Account/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the account manager on record</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Account Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>