force-app/main/default/objects/Account/fields/account_manager_email__c.field-meta.xml
<CustomField>
    <fullName>account_manager_email__c</fullName>
    <label>Account Manager Email</label>
    <type>TextArea</type>
</CustomField>