force-app/main/default/objects/Account/fields/account_manager_name__c.field-meta.xml
<CustomField>
    <fullName>account_manager_name__c</fullName>
    <label>Account Manager Name</label>
    <type>TextArea</type>
</CustomField>