force-app/main/default/objects/Account/fields/account_manager_phone__c.field-meta.xml
<CustomField>
    <fullName>account_manager_phone__c</fullName>
    <label>Account Manager Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>