force-app/main/default/objects/Account/fields/account_manager_tz__c.field-meta.xml
<CustomField>
    <fullName>account_manager_tz__c</fullName>
    <label>Account Manager TZ</label>
    <type>TextArea</type>
</CustomField>