force-app/main/default/objects/Account/fields/Account_Managers_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Managers_Parent_Account__c</fullName>
    <description>This custom (Reporting) field is used to sort Accounts by the Account Manager&apos;s company (Account).</description>
    <formula>Account_Manager__r.Account.Name</formula>
    <inlineHelpText>This custom (Reporting) field is used to sort Accounts by the Account Manager&apos;s company (Account).</inlineHelpText>
    <label>Account Managers Parent Account</label>
    <type>Text</type>
</CustomField>