force-app/main/default/objects/Account/fields/Active_License_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_License_Effective_Date__c</fullName>
    <label>Active License Effective Date</label>
    <type>Date</type>
</CustomField>