force-app/main/default/objects/Account/fields/Active_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_License_Status__c</fullName>
    <label>Active License Status</label>
    <type>TextArea</type>
</CustomField>