force-app/main/default/objects/Account/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <label>Airport</label>
    <type>TextArea</type>
</CustomField>