force-app/main/default/objects/Account/fields/ANZ_18_Digit_ID_for_Account_Organisatino__c.field-meta.xml
<CustomField>
    <fullName>ANZ_18_Digit_ID_for_Account_Organisatino__c</fullName>
    <description>Stores the matching ANZ 18 Digit ID for their Organization</description>
    <label>ANZ 18 Digit ID for Account/Organisatino</label>
    <length>18</length>
    <type>Text</type>
</CustomField>