force-app/main/default/objects/Account/fields/BC_CAN_Currency__c.field-meta.xml
<CustomField>
    <fullName>BC_CAN_Currency__c</fullName>
    <label>BC CAN Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BC_Currency_Code</valueSetName>
    </valueSet>
</CustomField>