force-app/main/default/objects/Account/fields/BC_CAN_Customer_Template_Codes__c.field-meta.xml
<CustomField>
    <fullName>BC_CAN_Customer_Template_Codes__c</fullName>
    <label>BC CAN Customer Template Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BC_Customer_Template_Codes</valueSetName>
    </valueSet>
</CustomField>