force-app/main/default/objects/Account/fields/BC_Synced__c.field-meta.xml
<CustomField>
    <fullName>BC_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if record is synced to BC system</description>
    <inlineHelpText>Record has been synced to Business Central</inlineHelpText>
    <label>BC Synced</label>
    <type>Checkbox</type>
</CustomField>