force-app/main/default/objects/Account/fields/Best_Practice_Discount__c.field-meta.xml
<CustomField>
    <fullName>Best_Practice_Discount__c</fullName>
    <inlineHelpText>If this field is blank, please assume that the Licensee receives the most current pricing discount.</inlineHelpText>
    <label>Best Practice Discount</label>
    <type>TextArea</type>
</CustomField>