force-app/main/default/objects/Account/fields/Billing_info__c.field-meta.xml
<CustomField>
    <fullName>Billing_info__c</fullName>
    <label>Billing info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>