force-app/main/default/objects/Account/fields/Binder_Discount__c.field-meta.xml
<CustomField>
    <fullName>Binder_Discount__c</fullName>
    <inlineHelpText>If this field is blank, please assume that the Licensee receives the most current pricing discount.</inlineHelpText>
    <label>Binder Discount</label>
    <type>TextArea</type>
</CustomField>