force-app/main/default/objects/Account/fields/Book_Discount__c.field-meta.xml
<CustomField>
    <fullName>Book_Discount__c</fullName>
    <inlineHelpText>If this field is blank, please assume that the Licensee receives the most current pricing discount.</inlineHelpText>
    <label>Book Discount</label>
    <type>TextArea</type>
</CustomField>