force-app/main/default/objects/Account/fields/Breakfasts__c.field-meta.xml
<CustomField>
    <fullName>Breakfasts__c</fullName>
    <label>Breakfasts</label>
    <type>TextArea</type>
</CustomField>