force-app/main/default/objects/Account/fields/Breakout_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Breakout_Rooms__c</fullName>
    <label>Breakout Rooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>