force-app/main/default/objects/Account/fields/Can_we_use_PO_number_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Can_we_use_PO_number_on_Invoice__c</fullName>
    <label>Can we use PO number on Invoice?</label>
    <type>TextArea</type>
</CustomField>