force-app/main/default/objects/Account/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <label>Cancellation Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>