force-app/main/default/objects/Account/fields/Client_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Client_Preferences__c</fullName>
    <label>Client Preferences</label>
    <type>TextArea</type>
</CustomField>