force-app/main/default/objects/Account/fields/Client_Preferences_Continued__c.field-meta.xml
<CustomField>
    <fullName>Client_Preferences_Continued__c</fullName>
    <label>Client Preferences Continued</label>
    <type>TextArea</type>
</CustomField>