force-app/main/default/objects/Account/fields/Company_email_domain__c.field-meta.xml
<CustomField>
    <fullName>Company_email_domain__c</fullName>
    <description>Enter everything after the &quot;@&quot;.  This field is used in the mapping process of registration importing, specifically at this time for HQ.</description>
    <inlineHelpText>Enter everything after the &quot;@&quot;.  This field is used in the mapping process of registration importing, specifically at this time for HQ.</inlineHelpText>
    <label>Company email domain</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>