force-app/main/default/objects/Account/fields/Customer_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Template_Code__c</fullName>
    <label>BC HQ Customer Template Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BC_Customer_Template_Codes</valueSetName>
    </valueSet>
</CustomField>