force-app/main/default/objects/Account/fields/Data_Storage_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Requirements__c</fullName>
    <description>Governs whether or not the page layout shows the warning about storing data in Salesforce</description>
    <label>Data Storage Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Storage_Requirements</valueSetName>
    </valueSet>
</CustomField>