force-app/main/default/objects/Account/fields/Date_of_last_enterprise_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_enterprise_opportunity__c</fullName>
    <description>This field was created for an industry reallignment project when we changed the POD structure.  It is tied to roll-up helper to deliver the most recent enterprise opportunity created date.  MB 3/10/22</description>
    <label>Date of last enterprise opportunity</label>
    <type>Date</type>
</CustomField>