force-app/main/default/objects/Account/fields/Dinners__c.field-meta.xml
<CustomField>
    <fullName>Dinners__c</fullName>
    <label>Dinners</label>
    <type>TextArea</type>
</CustomField>