force-app/main/default/objects/Account/fields/Don_t_Assign_Prework_Proxima__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Assign_Prework_Proxima__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Assign Prework &amp; Proxima</label>
    <type>Checkbox</type>
</CustomField>