force-app/main/default/objects/Account/fields/Engagement_Leader__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>