force-app/main/default/objects/Account/fields/EORI_or_other_Shipping_Info__c.field-meta.xml
<CustomField>
    <fullName>EORI_or_other_Shipping_Info__c</fullName>
    <label>EORI or other Shipping Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>