force-app/main/default/objects/Account/fields/FedEx_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Account_Number__c</fullName>
    <inlineHelpText>This is the clients account number</inlineHelpText>
    <label>FedEx Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>