force-app/main/default/objects/Account/fields/Fortune_1000_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Fortune_1000_Ranking__c</fullName>
    <label>Fortune 1000 Ranking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>