force-app/main/default/objects/Account/fields/GAN_Lead_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>GAN_Lead_Notification_Email__c</fullName>
    <inlineHelpText>This is the email address for the GAN Contact that leads get sent to.</inlineHelpText>
    <label>GAN Lead Notification Email</label>
    <type>Email</type>
</CustomField>