force-app/main/default/objects/Account/fields/Ground_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation__c</fullName>
    <label>Ground Transportation</label>
    <type>TextArea</type>
</CustomField>