force-app/main/default/objects/Account/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <label>Hotel</label>
    <type>TextArea</type>
</CustomField>