force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTIVITIES TO SUPPORT MINERAL EXTRACTION</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIVE ACTIVITIES, COMPLEMENTARY SERVICES AND CONSULTING</fullName>
            </value>
            <value>
                <fullName>ADVERTISING AND MARKET RESEARCH</fullName>
            </value>
            <value>
                <fullName>Aerospace/Aviation</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry, Fishing &amp; Hunting</fullName>
            </value>
            <value>
                <fullName>AGRICULTURE, LIVESTOCK / POULTRY AND RELATED SERVICES</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>AUTOMOTIVE MANUFACTURE OF, TRAILERS AND CARTS</fullName>
            </value>
            <value>
                <fullName>Chemical Manufacturing</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>DEFENSE AND SOCIAL SECURITY</fullName>
            </value>
            <value>
                <fullName>Development and Manufacturing</fullName>
            </value>
            <value>
                <fullName>EDUCATION</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Energy, Oil, &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF METALLIC MINERALS</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF MINERAL COAL</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF NON-METALLIC MINERALS</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF PETROLEUM AND NATURAL GAS</fullName>
            </value>
            <value>
                <fullName>FABRICATION OF FURNITURE</fullName>
            </value>
            <value>
                <fullName>Fast Moving Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Finance/Banking</fullName>
            </value>
            <value>
                <fullName>FINANCIAL ACTIVITIES, INSURANCE AND RELATED SERVICES</fullName>
            </value>
            <value>
                <fullName>FISHERIES AND AQUACULTURE</fullName>
            </value>
            <value>
                <fullName>FOOD</fullName>
            </value>
            <value>
                <fullName>Food/Beverage</fullName>
            </value>
            <value>
                <fullName>FOREST PRODUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>