force-app/main/default/objects/Account/fields/Is_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, we should have a tax exempt letter on file.</description>
    <inlineHelpText>Check this box if we have a tax exempt form on file</inlineHelpText>
    <label>Is Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>