force-app/main/default/objects/Account/fields/Karaoke_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Contact_Information__c</fullName>
    <label>Karaoke Contact Information</label>
    <type>TextArea</type>
</CustomField>