force-app/main/default/objects/Account/fields/Karaoke_Room__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Room__c</fullName>
    <label>Karaoke Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>