force-app/main/default/objects/Account/fields/Legal_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Account_Name__c</fullName>
    <label>Legal Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>