force-app/main/default/objects/Account/fields/Legal_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legal_Point_of_Contact__c</fullName>
    <label>Legal Point of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greg Henning</fullName>
            </value>
            <value>
                <fullName>Natalie Curry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>