force-app/main/default/objects/Account/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>