force-app/main/default/objects/Account/fields/License_eLearning__c.field-meta.xml
<CustomField>
    <fullName>License_eLearning__c</fullName>
    <label>License eLearning</label>
    <length>5</length>
    <type>Text</type>
</CustomField>