force-app/main/default/objects/Account/fields/License_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>License_Record_ID__c</fullName>
    <label>License Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>