force-app/main/default/objects/Account/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <inlineHelpText>If &quot;Other&quot; is selected, please see General Contract Details for additional information.</inlineHelpText>
    <label>License Type</label>
    <type>TextArea</type>
</CustomField>