force-app/main/default/objects/Account/fields/Licensed_Materials_Version__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Materials_Version__c</fullName>
    <label>Licensed Materials Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>