force-app/main/default/objects/Account/fields/Logistics_Notes__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Notes__c</fullName>
    <label>Logistics Notes</label>
    <type>TextArea</type>
</CustomField>