force-app/main/default/objects/Account/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <label>Logo</label>
    <type>TextArea</type>
</CustomField>