force-app/main/default/objects/Account/fields/Lunches__c.field-meta.xml
<CustomField>
    <fullName>Lunches__c</fullName>
    <label>Lunches</label>
    <type>TextArea</type>
</CustomField>