force-app/main/default/objects/Account/fields/Market_Reach__c.field-meta.xml
<CustomField>
    <fullName>Market_Reach__c</fullName>
    <inlineHelpText>When Multi Market is selected, the Global Account Management information section will display</inlineHelpText>
    <label>Market Reach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Market</fullName>
            </value>
            <value>
                <fullName>Multi Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>