force-app/main/default/objects/Account/fields/Material_discount__c.field-meta.xml
<CustomField>
    <fullName>Material_discount__c</fullName>
    <label>Material discount</label>
    <type>TextArea</type>
</CustomField>