force-app/main/default/objects/Account/fields/Material_Shipping_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Material_Shipping_Exceptions__c</fullName>
    <label>Material Shipping Exceptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>