force-app/main/default/objects/Account/fields/NAICS_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Description__c</fullName>
    <label>NAICS Code &amp; Description</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>