force-app/main/default/objects/Account/fields/NAV_Customer__c.field-meta.xml
<CustomField>
    <fullName>NAV_Customer__c</fullName>
    <label>NAV Customer #</label>
    <length>7</length>
    <type>Text</type>
</CustomField>