force-app/main/default/objects/Account/fields/notes__c.field-meta.xml
<CustomField>
    <fullName>notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>