force-app/main/default/objects/Account/fields/of_Advanced_Program_Participants__c.field-meta.xml
<CustomField>
    <fullName>of_Advanced_Program_Participants__c</fullName>
    <label># of Advanced Program Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>