force-app/main/default/objects/Account/fields/of_advisory_work_won__c.field-meta.xml
<CustomField>
    <fullName>of_advisory_work_won__c</fullName>
    <label># of Advisory work won</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Advisory Services</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Program_Title__c</field>
        <operation>notEqual</operation>
        <value>Speaking engagement, Webinar</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Done - Successful</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>