force-app/main/default/objects/Account/fields/of_Certified_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Certified_Employees__c</fullName>
    <inlineHelpText>Displays the number of contacts at this account that are certified.</inlineHelpText>
    <label># of Certified Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>