force-app/main/default/objects/Account/fields/of_PCAI_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_PCAI_Employees__c</fullName>
    <label># of PCAI Employees</label>
    <length>5</length>
    <type>Text</type>
</CustomField>