force-app/main/default/objects/Account/fields/of_Prosci_Taught_Certifications__c.field-meta.xml
<CustomField>
    <fullName>of_Prosci_Taught_Certifications__c</fullName>
    <label># of Prosci Taught Certifications</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>