force-app/main/default/objects/Account/fields/of_Prosci_Taught_Sponsor_Briefings__c.field-meta.xml
<CustomField>
    <fullName>of_Prosci_Taught_Sponsor_Briefings__c</fullName>
    <label># of Prosci Taught Sponsor Briefings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>