force-app/main/default/objects/Account/fields/of_SOW_s_generated__c.field-meta.xml
<CustomField>
    <fullName>of_SOW_s_generated__c</fullName>
    <label># of SOW&apos;s generated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>