force-app/main/default/objects/Account/fields/of_TTT_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_TTT_Employees__c</fullName>
    <label># of TTT Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>