force-app/main/default/objects/Account/fields/Onsite_Training__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Training__c</fullName>
    <label>Onsite Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>