force-app/main/default/objects/Account/fields/P_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>P_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Account Manager)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>