force-app/main/default/objects/Account/fields/P_Industry__c.field-meta.xml
<CustomField>
    <fullName>P_Industry__c</fullName>
    <label>Industry_P</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE, LIVESTOCK / POULTRY AND RELATED SERVICES</fullName>
            </value>
            <value>
                <fullName>FOREST PRODUCTION</fullName>
            </value>
            <value>
                <fullName>FISHERIES AND AQUACULTURE</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF MINERAL COAL</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF PETROLEUM AND NATURAL GAS</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF METALLIC MINERALS</fullName>
            </value>
            <value>
                <fullName>EXTRACTION OF NON-METALLIC MINERALS</fullName>
            </value>
            <value>
                <fullName>ACTIVITIES TO SUPPORT MINERAL EXTRACTION</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF FOOD PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF BEVERAGES</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF SMOKE PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF TEXTILE PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF CLOTHING AND ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF WOOD PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF CELLULOSE AND PAPER</fullName>
            </value>
            <value>
                <fullName>PRINTING AND REPRODUCTION</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF PRODUCTS DERIVED FROM OIL AND BIOFUELS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF CHEMICALS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF PHARMACEUTICAL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF RUBBER AND PLASTIC MATERIAL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF NON-METALLIC MINERAL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>METALLURGY</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF METAL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF COMPUTER EQUIPMENT, ELECTRONIC AND OPTICAL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF ELECTRICAL MACHINERY, EQUIPMENT AND MATERIALS</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF MACHINERY AND EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>AUTOMOTIVE MANUFACTURE OF, TRAILERS AND CARTS</fullName>
            </value>
            <value>
                <fullName>FABRICATION OF FURNITURE</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE OF MISCELLANEOUS PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE, REPAIR AND INSTALLATION OF MACHINERY AND EQUIPMENT ELECTRICITY, GAS AND OTHER UTILITIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>