force-app/main/default/objects/Account/fields/P_License_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>P_License_Termination_Date__c</fullName>
    <label>License Termination Date</label>
    <type>Date</type>
</CustomField>